tests/miniJava/neg/004351_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public java int [] java ( ) { return 0 ; } }
